# Django-Crawler

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  readme2.md  scrapy.cfg
apps/api_app/: apps.py  filters.py  forms.py  serializers.py  urls.py  urls_api.py  urls_html.py  views.py
apps/crawler_app/: apps.py  models.py  tasks.py
apps/crawler_app/esmerdis_scraper/: items.py  middlewares.py  pipelines.py  settings.py
apps/crawler_app/esmerdis_scraper/spiders/: products.py
apps/crawler_app/migrations/: 0001_initial.py  0002_remove_category_slug_category_created_at_and_more.py
apps/crawler_app/templates/: home.html
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh  start.sh
templates/: add_product.html  base.html  edit_product.html  product_detail.html  product_list.html
templates/drf-yasg/: swagger-ui.html
tests/: conftest.py
tests/api/: test_categories.py
utils/: logging.py
